--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.8",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "request-promise": "^4.2.5"
   }
 }
