--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/joi": "^16.1.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "node-cron": "^2.0.3",
     "request-promise": "^4.2.5"
   }
 }
