--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.17.1",
-    "mongodb": "^3.4.0"
+    "mongodb": "2.2.3"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.8",
