--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@hapi/joi": "^16.1.8",
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.18.1",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "node-cron": "^2.0.3",
+    "path": "^0.12.7",
     "request-promise": "^4.2.5"
   }
 }
