changed pm2 config file

--- a/pm2-config.json
+++ b/pm2-config.json
@@ -5,6 +5,14 @@
             "cwd": "./client",
             "script": "npm",
             "args" : "serve"
+        },
+        {
+            "name": "node-backend",
+            "script": "index.js" 
+        },
+        {
+            "name": "python-backend",
+            "script": "index.py" 
         }
     ]
 }
