--- a/.env
+++ b/.env
@@ -3,5 +3,4 @@ CLOUDINARY_API_SECRET = fk8sSN_zJrw78hhBL5O9ZuAkKuU
 CLOUDINARY_API_KEY = 883993679999481
 CLOUDINARY_CLOUD_NAME = dli7ogdap
 MONGO_URI = mongodb://127.0.0.1:27017/telegram-history
-PHONE_NUMBER_PROD = 380734686453
-PHONE_NUMBER_DEV = 79192868958
+PHONE_NUMBER = 380734686453
